Updated: Play  store update 19 (beta)

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -23,6 +23,9 @@
 Update 20:
 Fixed: Missing auto pause feature since Update 18.
 
+(not announced on Play Store) :
+Update: Added right ime option for text inputs.
+
 Update 19:
 Added: Now displaying track number in lists with medias.
 Updated: Improved image loading performances.
