--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,7 +1,6 @@
 *** Bugs ***
 ! Désactivation de l'égaliseur quand on entre dans les paramètres d'une bibliothèque
 ! Ajout d'une bibliothèque on qu'on lis depuis celle ci.
-! libellé "Nouvelle bibliotheque" (au lieu d'extension) dans les reglages des extensions pour provider local.
 
 *** Planned updates ***
 - Affichage info codecs/bitrate/samplerate
@@ -25,6 +24,8 @@ Fixed: Increased default embedded cover cache from 20MB to 100MB (~500 jpeg with
 Updated: Added right ime option for text inputs.
 Updated: Library edition code cleanup.
 Updated: Now using EditTextDialog for library edition.
+Updated: Now using EditTextDialog for extension edition.
+Fixed: Wrong title for extension edition dialog.
 
 Update 19:
 Added: Now displaying track number in lists with medias.
