--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,6 +1,5 @@
 *** Bugs ***
 ! Désactivation de l'égaliseur quand on entre dans les paramètres d'une bibliothèque
-! Ajout d'une bibliothèque on qu'on lis depuis celle ci.
 
 *** Planned updates ***
 - Chromecast audio output.
@@ -9,7 +8,7 @@
 - UPnP/DLNA audio output.
 - Neon and SSE optimizations for equalizer and resampling.
 - Container specific tags support (e.g. WMA star rating, embedded pictures, etc.).
-- Maybe support for webradios (streaming through HTTP and PLS support).	
+- Maybe support for webradios (streaming through HTTP and PLS support).
 
 *** Changelog ***
 
@@ -18,6 +17,7 @@ Updated: Improved media scanner performances if cover cache is full.
 Fixed: Scan cancellation causing freeze to the whole app.
 Fixed: Missing auto pause feature since Update 18.
 Fixed: Increased default embedded cover cache from 20MB to 100MB (~500 jpeg with res of 600x600 to ~2500).
+Fixed: Force close when using a new library right after creating it.
 
 (not announced on Play Store) :
 Updated: Added right ime option for text inputs.
