--- a/CHANGELOG
+++ b/CHANGELOG
@@ -13,14 +13,13 @@
 *** Changelog ***
 
 Update 20:
-Added: Click on previous button now reset playback position to 0s if > 4s and switch to previous track otherwise.
+Added: Click on previous button now restart playback if ts > 4s and switch to previous track otherwise.
 Added: Long click on previous or next button now do a fast seeking backward/forward.
 Added: Added media covers in "track" tab.
 Updated: Improved global performances.
 Fixed: Scan cancellation causing freeze to the whole app.
-Fixed: Missing auto pause feature since Update 18.
-Fixed: Increased default embedded cover cache from 20MB to 100MB (~500 jpeg with res of 600x600 to ~2500).
-Fixed: Force close when using a new library right after creating it.
+Fixed: Missing auto pause feature since previous update.
+Fixed: Various other Bugs.
 
 (not announced on Play Store) :
 Updated: Improved global performances (using event bus).
@@ -29,6 +28,8 @@ Updated: Added right ime option for text inputs.
 Updated: Library edition code cleanup.
 Updated: Now using EditTextDialog for library edition.
 Updated: Now using EditTextDialog for extension edition.
+Updated: Increased default embedded cover cache from 20MB to 100MB (~500 jpeg with res of 600x600 to ~2500).
+Fixed: Force close when using a new library right after creating it.
 Fixed: Enforced database integrity (open helper uniqueness now guaranted).
 Fixed: Force close on database upgrade (with oldVersion = 1 and newVersion = 3).
 Fixed: Wrong title for extension edition dialog.
